	fixed Std.int with negative numbers
	fixed some F9 issues with haXe-specific Array, Date and Math methods
	used AS3 namespace for F9 Array and String instance methods
	fixed F9 with uninitialized integer registers
	fixed F9 + operator with Dynamic/Null operands
	added Enum subtyping
	fix with remoting threadserver and exceptions
	fixed Flash9 dynamic runtime type field access

2007-07-25: 1.14
	fixed no error when invalid "catch" expression
	remove variance
	fixed prototype bug in neko when "Main" class is defined
	fixed flash9 xml iterator methods
	bugfix in flash9 ByteArray serialization
	fixed genAS3 conflicting classes and interfaces
	preserve neko output file extension
	added flash.Event for Flash9
	added --no-output
	fixed neko.net.Socket peer and host methods
	added neko.io.Process and neko.vm.Ui
	added haxe.xml.Proxy
	some flash6 fixes
	allowed simplequotes for xml attributes in Flash9 and JS
	flash9 optimizing compiler
	new faster neko binary AST
	added haxe.remoting.NekoSocketConnection and SocketProtocol
	don't allow for...in iteration with Dynamic or Unknown
	added flash9 resources
	fixed precedence of ternary operator ?:

2007-05-18: 1.13
	fixed bug with local variable masking package in catch type
	fixed "Not_found" when enum params differs
	added "override" for AS3 generator
	fixed stack overflow in typedefs
	added haxe.Timer.queue, removed delayedArg (use callback instead)
	fixed haxe.remoting.SocketConnection (msg invertions might occur)
	add uniqueness check for switch constants
	js : HtmlCollection and MetaDom.childNodes are not true Arrays
	allowed semicolon after typedef declaration
	fixed in-loop closure usage of "for" variable for Flash and JS
	added neko.net.ThreadRemotingServer.onXml (to handle crossdomain xml)
	more accurate stack trace for socket remoting
	prevent some memory leak in haxe.Timer / JS
	added flash fullscreen support
	added cond?a:b syntax support
	added utf8 buffer api
	added haxelib "dev" mode